removed data from kibana and elastic volume

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,9 @@
 ./kibana/data
+./kibana/data/
+./kibana/data/*
+./kibana/data/*/*
+
 ./elastic/data
+./elastic/data/
+./elastic/data/*
+./elastic/data/*/*
